<resources>
    <string name="app_name">Šichtovník</string>
    <string name="shift_person_schedule">Rozpis směn pracovníků</string>
    <string name="persons_list">Seznam pracovníků</string>
    <string name="project_about">O projektu</string>
    <string name="export_import">Export/Import dat</string>
    <string name="feedback">Zpětná vazba</string>
    <string name="drawer_open">Otevřít menu</string>
    <string name="drawer_close">Zavřít menu</string>
    <string name="project_description">Šichtovník je projekt na předmět BI-SP2 na FIT ČVUT.
        Jedná se o android aplikaci, která umožňuje spravovat lidi, jejich šichty a zobrazovat si, kdy má daný člověk volno či je v práci. Dále pak aplikace umí ukázat předhled obsazeností (volno / je v prácí) lidí v daný datum.
        \n\nAplikace má za cíl zlepšít svolávání týmu dobrovolných hasičů k akci.
        \nAutoři

        \n- Lukáš Komárek
        \n- Vojtěch Mach
        \n- Petr Panský
    </string>
    <string name="github_url">https://github.com/thepetas/schift-tracker</string>
    <string name="github_url_feedback">https://github.com/thepetas/schift-tracker</string>
    <string name="more_github">Více na GitHub...</string>


    <string name="person_edit">Upravit údaje</string>
    <string name="shift_add_exception">Přidat vyjímku směny</string>
    <string name="shift_new_plan">Nový rozpis směn</string>
    <string name="shift_cancel_plan">Zrušit rozpis směn</string>
    <string name="person_delete">Smazat pracovníka</string>


    <string-array name="persons">
        <item>Jan Novak</item>
        <item>Dan Horak</item>
        <item>Jiri Cerny</item>
        <item>Lukas Modry</item>
        <item>Standa Bily</item>
        <item>Ludek Hnedy</item>
        <item>Ludmila Nova</item>
        <item>Ivo Vlas</item>
        <item>Petr Salas</item>
        <item>Laso Klas</item>
        <item>Oto Manas</item>
    </string-array>

    <string name="title_activity_person_detail">Detail pracovníka</string>
    <string name="title_activity_person_edit">Upravit údaje</string>
    <string name="title_activity_person_shifts">Rozpis šichet pracovníka</string>

    <string name="schedules_list">Rozpis plánů šichet</string>
    <string name="schedule_add">Přidat plán šichet</string>
    <string name="schedule_edit">Upravit rozpis</string>

    <string name="placeholder_firstname">Jméno</string>
    <string name="placeholder_surname">Příjmení</string>
    <string name="placeholder_nickname">Přezdívka</string>
    <string name="placeholder_phone">Telefon</string>
    <string name="placeholder_email">Email</string>
    <string name="button_save">Uložit</string>
    <string name="button_shift_plan_person">Rozpis směn</string>
    <string name="schedule">Šichta</string>
    <string name="dialog_CONFIRM">Potvrdit</string>
    <string name="dialog_CANCEL">Zrušit</string>
    <string name="person_delete_confirm">Opravdu chcete smazat tohoto pracovníka?</string>
    <string name="person_delete_title">Smazat pracovníka</string>

    <string name="choose_date_from">Vybrat datum začátku</string>
    <string name="choose_date_remove">Smazat datum</string>
    <string name="choose_date_to">Vybrat datum konce</string>
    <string name="date_to">Datum konce</string>
    <string name="date_from">Datum začátku</string>
    <string name="time_to">Čas konce</string>
    <string name="time_from">Čas začátku</string>
    <string name="undefinite_time">neurčito</string>

    <string name="exception_list">Seznam vyjímek</string>
    <string name="exception">Vyjímka</string>
    <string name="exception_edit">Upravit vyjímku</string>
    <string name="exception_add">Přidat vyjímku</string>
    <string name="exception_type">Typ vyjímky</string>
    <string name="exception_title">Název vyjímky</string>
    <string name="shift_exception_button_text">Výjimky</string>
    <string name="shift_schedule_button_text">Rozpis směn</string>
    <string name="shift_types_button_text">Druhy směn</string>
    <string name="exception_edit_wrong_desctription">Zadejte název vyjímky</string>
    <string name="exception_edit_wrong_period">Cas konce nemuze byt drive nez cas zacatku</string>

    <string name="days_count">Počet dní</string>
    <string name="schedule_type_title">Název typu plánu šichet</string>
    <string name="schedule_types">Typy plánů šichet</string>
    <string name="schedule_types_manage">Správa plánů šichet</string>

    <string name="free_time">Volno</string>
    <string name="work_time">Práce</string>

    <string name="unknown">Neznámo</string>
    <string name="title_activity_person_add">Vytvořit pracovníka</string>

    <string name="edit">Upravit</string>
    <string name="delete">Smazat</string>
    <string name="choose_action">Vyberte akci</string>
    <string name="schedule_delete_message">Opravdu chcete smazat tento plán?</string>
    <string name="schedule_delete_title">Smazat plán</string>
    <string name="schedule_after_delete">Plán byl smazán.</string>
    <string name="schedule_after_edit">Změny byly uloženy.</string>
    <string name="schedule_after_create">Nový plán byl přidán.</string>
    <string name="schedule_after_cancel">Změny neuloženy.</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>

    <string name="exception_delete_message">Opravdu chcete smazat tuto vyjímku?</string>
    <string name="exception_delete_title">Smazat vyjímku</string>
    <string name="exception_after_delete">Vyjímka byla smazána.</string>
    <string name="exception_after_edit">Změny vyjímky byly uloženy.</string>
    <string name="exception_after_create">Nová vyjímka byla přidána.</string>
    <string name="exception_after_cancel">Změny neuloženy.</string>
    <string name="feature_in_dev">Tato funkcionalita je zatím ve fázi vývoje.</string>

    <string name="export_sdcard_header">Export databáze do souboru</string>
    <string name="export_sdcard_description">Databázi naleznete ve složce /Shiftify/data.shiftify</string>
    <string name="export_sdcard_button">Exportovat databázi</string>
    <string name="export_email_header">Export databáze do emailu</string>
    <string name="export_email_description">Databáze bude připojena k emailu jako příloha</string>
    <string name="export_email_button">Poslat databázi emailem</string>
    <string name="import_sdcard_header">Import databáze ze souboru</string>
    <string name="import_sdcard_description">Databáze se načte ze složky /Shiftify/data.shiftify</string>
    <string name="import_sdcard_button">Importovat databázi</string>


    <string name="email_was_sent">Email byl odeslán</string>
    <string name="email_was_not_sent">Email nebyl odeslán</string>
    <string name="cant_write_external_storage">Nelze zapisovat do paměti!</string>
    <string name="cant_read_external_storage">Nelze číst z paměti!</string>
    <string name="export_failed">Při exportu nastala chyba</string>
    <string name="import_failed">Při importu nastala chyba</string>
    <string name="export_success_to">Úspěšně exportováno</string>
    <string name="import_success">Úspěšně importováno</string>
    <string name="import_alert_dialog_title">Import</string>
    <string name="import_alert_dialog_message_from">Určitě chcete importovat data z \"%1$s\"?</string>
    <string name="import_alert_dialog_message">Určitě chcete importovat data?</string>
    <string name="import_dialog_positive_button">ano</string>
    <string name="import_dialog_negative_button">ne</string>
    <string name="file_was_not_found">Soubor \"%1$s/%2$s\" nebyl nalezen</string>
    <string name="schedule_type_edit">Upravit plán</string>
    <string name="schedule_type_was_created">Plán byl vytvořen</string>
    <string name="schedule_type_was_edited">"Změny byly uloženy"</string>
    <string name="wrong_day_of_cycle">Den musí být od 1 do 99</string>
    <string name="schedule_shift">šichta</string>
    <string name="add_schedule_shift">Přidat šichtu</string>
    <string name="schedule_type_edit_error">Chyba při editaci plánu</string>
    <string name="schedule_type_create_error">Chyba pri uložení plánu</string>
    <string name="error_while_fetching_schedule_types">Nepodařilo se načíst plány</string>
    <string name="day">Den</string>
    <string name="from">Od:</string>
    <string name="to">Do:</string>
    <string name="schedule_shift_name">Název šichty</string>
    <string name="schedule_shift_description">Popis šichty</string>
    <string name="schedule_type_name">Název plánu</string>
    <string name="schedule_type_description">Popis plánu</string>
</resources>
