<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/projectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/projectDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project_description" />

    <TextView
        android:id="@+id/more_github"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:layout_marginTop="10dp"
        android:text="@string/more_github" />

</LinearLayout>