<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person_delete_confirm"
        android:textSize="20dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:id="@+id/person_delete_CONFIRM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_CONFIRM"/>

        <Button
            android:id="@+id/person_delete_CANCEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_CANCEL"/>

    </LinearLayout>
</LinearLayout>