<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/exception_type" />

        <Spinner
            android:id="@+id/spinner_schedule_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:spinnerMode="dialog" />


        <EditText
            android:id="@+id/title_exception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exception_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_from_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="@string/date_from"
                android:textAlignment="center"
                android:textSize="@dimen/textview_datetime" />

            <TextView
                android:id="@+id/time_from_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:gravity="right"
                android:text="@string/time_to"
                android:textAlignment="gravity"
                android:textSize="@dimen/textview_datetime" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_to_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:text="@string/date_to"
                android:textAlignment="center"
                android:textSize="@dimen/textview_datetime" />

            <TextView
                android:id="@+id/time_to_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:freezesText="true"
                android:gravity="right"
                android:text="@string/time_to"
                android:textAlignment="gravity"
                android:textSize="@dimen/textview_datetime" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>